<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Sign_in">


    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="279dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_5_shape"
        android:text="@string/ingresar_string"
        android:textColor="@color/_bg__sign_in_screen_color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPass"
        app:layout_constraintVertical_bias="0.062" />

    <EditText
        android:id="@+id/inputUsuario"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_3_shape"
        android:gravity="center_vertical|start"
        android:hint="Ingrese Correo"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/ingrese_usuario_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario" />

    <EditText
        android:id="@+id/inputContrasena"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_3_shape"
        android:gravity="center_vertical|start"
        android:hint="@string/ingrese_contrase_a_string"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/ingrese_usuario_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Correo"
        android:textColor="@color/usuario_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/inputUsuario"
        app:layout_constraintTop_toBottomOf="@+id/ingreso"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/contrase_a_string"
        android:textColor="@color/usuario_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/inputContrasena"
        app:layout_constraintTop_toBottomOf="@+id/inputUsuario"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/forgetPass"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/__olvido_la_contrase_a__string"
        android:textColor="@color/ingreso_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/inputContrasena"
        app:layout_constraintTop_toBottomOf="@+id/inputContrasena" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar">

        <TextView
            android:id="@+id/__no_tiene_cuenta_"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="¿No tienes una cuenta?"
            android:textColor="@color/usuario_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/registrese"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="10px"
            android:gravity="center"
            android:text="Regístrate"
            android:textColor="@color/registrese_color"
            android:textSize="14sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/vectorAtras"
        android:layout_width="28dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:contentDescription="vector"
        android:src="@drawable/return_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ingreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/ingreso_string"
        android:textColor="@color/ingreso_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoandroid2_1"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/____icon__eye_outline_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="295dp"
        android:layout_marginTop="509dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoandroid2_1"
        android:layout_width="224dp"
        android:layout_height="217dp"
        android:contentDescription="logoandroid2_1"
        android:src="@drawable/logoandroid2_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

</androidx.constraintlayout.widget.ConstraintLayout>